--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,9 +7,11 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^5.3.3",
     "gh-pages": "^6.1.1",
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
